--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:description" content="105 to 150 characters" />
     <meta property="og:image" content="1200px to 627px less than 5mb" />
     <!-- Twitter Meta Tags -->
-    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:careers__card" content="summary_large_image" />
     <meta property="twitter:url" content="url" />
     <meta property="twitter:title" content="Tech Road Map" />
     <meta property="twitter:description" content="105 to 150 characters" />
@@ -93,7 +93,6 @@
             <ul class="nav-link-wrapper">
               <!-- nav links -->
               <li><a class="nav-link active" href="#">Home</a></li>
-              <li><a class="nav-link" href="#">About</a></li>
               <li>
                 <a class="nav-link" href="#">Careers</a>
               </li>
@@ -126,6 +125,149 @@
           </div>
         </div>
       </nav>
+
+      <header class="banner">
+        <div class="banner-wrapper">
+          <h1>Tech Road Map</h1>
+          <p
+            >Roadmaps, articles and resources to help you choose a career path,
+            start your journey and grow in tech.</p
+          >
+        </div>
+      </header>
+
+      <main>
+        <section class="intro">
+          <div class="intro-wrapper">
+            <h2 class="heading">Welcome!</h2>
+            <div class="intro__body">
+              <p
+                >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Inventore nobis voluptate doloribus deserunt maxime quos,
+                quibusdam aperiam magni incidunt eos enim, laborum nam odio
+                placeat ut consequuntur aut dolorem sint!</p
+              >
+              <p
+                >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
+                odio debitis aut natus dolorem esse. Aliquam, qui odit deserunt
+                officiis fugit fuga maiores beatae alias, rem porro magni
+                aliquid at?</p
+              >
+            </div>
+          </div>
+        </section>
+		
+        <section class="careers">
+          <h2 class="heading">Careers in Tech</h2>
+
+          <div class="careers__cards">
+            <a href="#" class="careers__card-link">
+              <div class="careers__card">
+                <h3>Frontend</h3>
+                <p
+                  >Curated guide and resources to becoming a frontend
+                  developer.</p
+                >
+              </div>
+            </a>
+            <a href="#" class="careers__card-link">
+              <div class="careers__card">
+                <h3>Backend</h3>
+                <p
+                  >Curated guide and resources to becoming a backend
+                  developer.</p
+                >
+              </div>
+            </a>
+            <a href="#" class="careers__card-link">
+              <div class="careers__card">
+                <h3>Android/Mobile</h3>
+                <p
+                  >Curated guide and resources to becoming a android/mobile
+                  developer.</p
+                >
+              </div>
+            </a>
+            <a href="#" class="careers__card-link">
+              <div class="careers__card">
+                <h3>Ui/Ux Designer</h3>
+                <p>Curated guide and resources to becoming a Ui/Ux designer.</p>
+              </div>
+            </a>
+            <a href="#" class="careers__card-link">
+              <div class="careers__card">
+                <h3>Data Analyst</h3>
+                <p>Curated guide and resources to becoming a data analyst.</p>
+              </div>
+            </a>
+            <a href="#" class="careers__card-link">
+              <div class="careers__card">
+                <h3>Product Management</h3>
+                <p
+                  >Curated guide and resources to becoming a product manager.</p
+                >
+              </div>
+            </a>
+          </div>
+        </section>
+      </main>
+
+      <aside class="opensource">
+        <div class="opensource-wrapper">
+          <h2 class="heading">Open Source</h2>
+          <div class="opensource__body">
+            <p>
+              The <a href="#">project</a> is OpenSource. All contributions are
+              welcome to grow this <a href="#">project</a>.</p
+            >
+            <p
+              >You can contribute as a <a href="#">developer</a> or a
+              <a href="#">non-developer</a>.</p
+            >
+            <p style="display: none">
+              A considerable amount of my time is spent doing unpaid community
+              work on things that I hope will help humanity in some way. Your
+              sponsorship helps me continue to produce more open-source and free
+              educational material consumed by hundreds of thousands of
+              developers every month.</p
+            ></div
+          >
+        </div>
+      </aside>
+
+      <footer>
+        <div class="footer-wrapper">
+          <div class="sections">
+            <ul class="footer-links">
+              <li><a class="footer-link" href="#">Home</a></li>
+              <li>
+                <a class="footer-link" href="#">Careers</a>
+              </li>
+              <li>
+                <a class="footer-link" href="#">Contact</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="sections attribution">
+            <p
+              ><a href="#">Tech Roadmap</a> is created by
+              <a href="https://github.com/timonwa">Timonwa</a></p
+            >
+          </div>
+
+          <div class="sections quote">
+            <p
+              >Roadmaps, articles and resources to help you choose a career
+              path, start your journey and grow in tech.
+            </p>
+          </div>
+
+          <div class="sections">
+            <p><i class="fa fa-copyright" aria-hidden="true"> 2022</i> </p>
+          </div>
+        </div>
+      </footer>
     </div>
 
     <!--* JavaScripts -->
