added th variable colors.

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   <body>
     <!--* container/body wrapper for every content in the body -->
     <div class="flex">
+      <div class="nav-space"></div>
       <!-- nav bar -->
       <nav>
         <div class="nav-wrapper">
@@ -156,7 +157,7 @@
             </div>
           </div>
         </section>
-		
+
         <section class="careers">
           <h2 class="heading">Careers in Tech</h2>
 
@@ -217,12 +218,13 @@
           <h2 class="heading">Open Source</h2>
           <div class="opensource__body">
             <p>
-              The <a href="#">project</a> is OpenSource. All contributions are
-              welcome to grow this <a href="#">project</a>.</p
+              This <a href="#">project</a> is OpenSource. All contributions are
+              welcome to grow this <a href="#">project</a> and don't need to
+              know how to code to contribute.</p
             >
             <p
-              >You can contribute as a <a href="#">developer</a> or a
-              <a href="#">non-developer</a>.</p
+              >You can contribute as a <a href="#">developer here</a> or a
+              <a href="#">non-developer here</a>.</p
             >
             <p style="display: none">
               A considerable amount of my time is spent doing unpaid community
