added metatag contents.

--- a/html/careers.html
+++ b/html/careers.html
@@ -7,23 +7,41 @@
     <!--* The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!--* Title -->
-    <title>Tech Road Map</title>
+    <title>The different careers in tech. | Tech Roadmap.</title>
 
     <!-- * SEO Meta Tags -->
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Tech Road Map" />
-    <meta name="description" content="105 to 150 characters" />
+    <meta
+      name="title"
+      content="The different careers in tech. | Tech Roadmap."
+    />
+    <meta
+      name="description"
+      content="Begin your career in Tech. Roadmaps, articles and resources to help you choose a career path, start your journey and grow in tech."
+    />
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="url" />
-    <meta property="og:title" content="Tech Road Map" />
-    <meta property="og:description" content="105 to 150 characters" />
+    <meta property="og:url" content="https://techroadmap.netlify.com" />
+    <meta
+      property="og:title"
+      content="The different careers in tech. | Tech Roadmap."
+    />
+    <meta
+      property="og:description"
+      content="Begin your career in Tech. Roadmaps, articles and resources to help you choose a career path, start your journey and grow in tech."
+    />
     <meta property="og:image" content="1200px to 627px less than 5mb" />
     <!-- Twitter Meta Tags -->
     <meta property="twitter:careers__card" content="summary_large_image" />
-    <meta property="twitter:url" content="url" />
-    <meta property="twitter:title" content="Tech Road Map" />
-    <meta property="twitter:description" content="105 to 150 characters" />
+    <meta property="twitter:url" content="https://techroadmap.netlify.com" />
+    <meta
+      property="twitter:title"
+      content="The different careers in tech. | Tech Roadmap."
+    />
+    <meta
+      property="twitter:description"
+      content="Begin your career in Tech. Roadmaps, articles and resources to help you choose a career path, start your journey and grow in tech."
+    />
     <meta property="twitter:image" content="1200px to 627px less than 5mb" />
 
     <!--* Fonts -->
@@ -127,20 +145,10 @@
         </div>
       </nav>
 
-      <header class="banner">
-        <div class="banner-wrapper">
-          <h1>Tech Road Map</h1>
-          <p
-            >Roadmaps, articles and resources to help you choose a career path,
-            start your journey and grow in tech.</p
-          >
-        </div>
-      </header>
-
       <main>
         <section class="intro">
           <div class="intro-wrapper">
-            <h2 class="heading">Welcome!</h2>
+            <h2 class="heading">Begin Your Journey!</h2>
             <div class="intro__body">
               <p
                 >Lorem ipsum dolor sit amet consectetur adipisicing elit.
