--- a/index.html
+++ b/index.html
@@ -7,23 +7,32 @@
     <!--* The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!--* Title -->
-    <title>Tech Road Map</title>
+    <title>Tech Roadmap</title>
 
     <!-- * SEO Meta Tags -->
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Tech Road Map" />
-    <meta name="description" content="105 to 150 characters" />
+    <meta name="title" content="Tech Roadmap" />
+    <meta
+      name="description"
+      content="Begin your career in Tech. Roadmaps, articles and resources to help you choose a career path, start your journey and grow in tech."
+    />
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="url" />
-    <meta property="og:title" content="Tech Road Map" />
-    <meta property="og:description" content="105 to 150 characters" />
+    <meta property="og:url" content="https://techroadmap.netlify.com" />
+    <meta property="og:title" content="Tech Roadmap" />
+    <meta
+      property="og:description"
+      content="Begin your career in Tech. Roadmaps, articles and resources to help you choose a career path, start your journey and grow in tech."
+    />
     <meta property="og:image" content="1200px to 627px less than 5mb" />
     <!-- Twitter Meta Tags -->
     <meta property="twitter:careers__card" content="summary_large_image" />
-    <meta property="twitter:url" content="url" />
-    <meta property="twitter:title" content="Tech Road Map" />
-    <meta property="twitter:description" content="105 to 150 characters" />
+    <meta property="twitter:url" content="https://techroadmap.netlify.com" />
+    <meta property="twitter:title" content="Tech Roadmap" />
+    <meta
+      property="twitter:description"
+      content="Begin your career in Tech. Roadmaps, articles and resources to help you choose a career path, start your journey and grow in tech."
+    />
     <meta property="twitter:image" content="1200px to 627px less than 5mb" />
 
     <!--* Fonts -->
@@ -83,7 +92,7 @@
         <div class="nav-wrapper">
           <!-- website logo -->
           <div class="nav-logo">
-            <a href="/"><p>TECH ROAD MAP</p></a>
+            <a href="/"><p>TECH Career ROAD MAP</p></a>
             <!-- <a href="#"><h4>NavBar</h4></a> -->
             <!-- <a href="#"><img src="" alt="brand image"></a> -->
           </div>
@@ -129,7 +138,7 @@
 
       <header class="banner">
         <div class="banner-wrapper">
-          <h1>Tech Road Map</h1>
+          <h1>Tech Career Road Map</h1>
           <p
             >Roadmaps, articles and resources to help you choose a career path,
             start your journey and grow in tech.</p
