removed contacts page.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="nav-wrapper">
           <!-- website logo -->
           <div class="nav-logo">
-            <a href="/"><p>TECH Career ROAD MAP</p></a>
+            <a href="/"><p>TECH ROADMAP</p></a>
             <!-- <a href="#"><h4>NavBar</h4></a> -->
             <!-- <a href="#"><img src="" alt="brand image"></a> -->
           </div>
@@ -106,9 +106,9 @@
               <li>
                 <a class="nav-link" href="/html/careers.html">Careers</a>
               </li>
-              <li>
+              <!-- <li>
                 <a class="nav-link" href="/html/contact.html">Contact</a>
-              </li>
+              </li> -->
               <!-- <li class="dropdown-menu"
                 >Dropdown
                 <i class="fas fa-chevron-down fa-sm fa-fw dropdown-open"></i>
