removed active class from links and added frontend page.

--- a/html/careers.html
+++ b/html/careers.html
@@ -111,7 +111,7 @@
             <!-- nav link cntr -->
             <ul class="nav-link-wrapper">
               <!-- nav links -->
-              <li><a class="nav-link active" href="/">Home</a></li>
+              <li><a class="nav-link" href="/">Home</a></li>
               <li>
                 <a class="nav-link" href="/html/careers.html">Careers</a>
               </li>
@@ -148,7 +148,7 @@
       <main>
         <section class="intro">
           <div class="intro-wrapper">
-            <h2 class="heading">Begin Your Journey!</h2>
+            <h1 class="heading">Begin Your Tech Career Journey!</h1>
             <div class="intro__body">
               <p
                 >Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -170,7 +170,7 @@
           <h2 class="heading">Careers in Tech</h2>
 
           <div class="careers__cards">
-            <a href="#" class="careers__card-link">
+            <a href="/html/careers/frontend.html" class="careers__card-link">
               <div class="careers__card">
                 <h3>Frontend</h3>
                 <p
@@ -252,9 +252,6 @@
               <li><a class="footer-link" href="/">Home</a></li>
               <li>
                 <a class="footer-link" href="/html/careers.html">Careers</a>
-              </li>
-              <li>
-                <a class="footer-link" href="/html/contact.html">Contact</a>
               </li>
             </ul>
           </div>
