--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <!-- nav link cntr -->
             <ul class="nav-link-wrapper">
               <!-- nav links -->
-              <li><a class="nav-link active" href="/">Home</a></li>
+              <li><a class="nav-link" href="/">Home</a></li>
               <li>
                 <a class="nav-link" href="/html/careers.html">Careers</a>
               </li>
@@ -171,7 +171,7 @@
           <h2 class="heading">Careers in Tech</h2>
 
           <div class="careers__cards">
-            <a href="#" class="careers__card-link">
+            <a href="/html/careers/frontend.html" class="careers__card-link">
               <div class="careers__card">
                 <h3>Frontend</h3>
                 <p
@@ -253,9 +253,6 @@
               <li><a class="footer-link" href="/">Home</a></li>
               <li>
                 <a class="footer-link" href="/html/careers.html">Careers</a>
-              </li>
-              <li>
-                <a class="footer-link" href="/html/contact.html">Contact</a>
               </li>
             </ul>
           </div>
