added javascript to sidebar.

--- a/html/careers/frontend.html
+++ b/html/careers/frontend.html
@@ -135,10 +135,10 @@
         <div class="sidebar-wrapper">
           <!-- side bar toggle -->
           <div class="sidebar-toggle">
-            <p id="open-sidebar"
+            <p class="open-sidebar"
               >Open Menu <i class="fa fa-chevron-down" aria-hidden="true"></i
             ></p>
-            <p id="close-sidebar"
+            <p class="close-sidebar"
               >Close Menu <i class="fa fa-chevron-up" aria-hidden="true"></i
             ></p>
           </div>
