styled the scroll bar.

--- a/html/careers/frontend.html
+++ b/html/careers/frontend.html
@@ -222,7 +222,7 @@
             <!-- html and css (advanced level) -->
             <li class="sidebar-title">
               <a href="#css-advanced">Html and Css - Advanced</a>
-              </li>
+            </li>
 
             <!-- javascript -->
             <li class="sidebar-title">
@@ -230,7 +230,7 @@
             </li>
 
             <!-- javascript advanced -->
-            <li class="sidebar-title" >
+            <li class="sidebar-title">
               <a href="#javascript-advanced">Javascript Advanced</a>
             </li>
 
@@ -246,10 +246,10 @@
                 </li>
                 <li class="sidebar-subtitle">
                   <a href="#git-desktop">Git Desktop</a>
-                  </li>
+                </li>
                 <li class="sidebar-subtitle">
                   <a href="#bitbucket">BitBucket</a>
-                  </li>
+                </li>
               </ul>
             </li>
 
@@ -267,15 +267,15 @@
             </li>
 
             <!-- css frameworks and libraries -->
-            <li class="sidebar-title" 
-            ><a href="#css-frameworks">Css Frameworks and Libraries</a>
+            <li class="sidebar-title"
+              ><a href="#css-frameworks">Css Frameworks and Libraries</a>
               <ul class="sidebar-sublinks">
                 <li class="sidebar-subtitle">
                   <a href="#bootstrap">Bootstrap</a>
-                  </li>
+                </li>
                 <li class="sidebar-subtitle">
                   <a href="#tailwind">Tailwind</a>
-                  </li>
+                </li>
                 <li class="sidebar-subtitle">
                   <a href="#bulma">Bulma</a>
                 </li>
@@ -300,8 +300,8 @@
 
             <!-- json and json server -->
             <li class="sidebar-title">
-              <a href="#json">Json and Json Server</a
-                ></li>
+              <a href="#json">Json and Json Server</a></li
+            >
 
             <!-- apis -->
             <li class="sidebar-title">
@@ -310,7 +310,6 @@
 
             <!-- js frameworks and libraries -->
             <li class="sidebar-title">
-              
               <a href="#js-frameworks">Javascript Frameworks</a>
               <ul class="sidebar-sublinks">
                 <li class="sidebar-subtitle">
@@ -326,7 +325,8 @@
             </li>
 
             <!-- design resources -->
-            <li class="sidebar-title"><a href="#design">Design Resources</a>
+            <li class="sidebar-title"
+              ><a href="#design">Design Resources</a>
               <ul class="sidebar-sublinks">
                 <li class="sidebar-subtitle">
                   <a href="#fonts">Fonts</a>
@@ -334,12 +334,12 @@
                 <li class="sidebar-subtitle">
                   <a href="#icons">Icons</a>
                 </li>
-                <li class="sidebar-subtitle" >
+                <li class="sidebar-subtitle">
                   <a href="#photos">Stock Photos</a>
-                  </li>
+                </li>
                 <li class="sidebar-subtitle">
                   <a href="#graphics">Graphics and Vectors</a>
-                  </li>
+                </li>
                 <li class="sidebar-subtitle">
                   <a href="#others">Others</a>
                 </li>
@@ -349,7 +349,7 @@
             <!-- cheatsheet -->
             <li class="sidebar-title">
               <a href="#cheatsheets">Cheatsheets</a>
-              </li>
+            </li>
 
             <!-- others -->
             <li class="sidebar-title">
@@ -4783,7 +4783,7 @@
         </section>
 
         <!--* APIs -->
-        <section id="apis"class="resource-section">
+        <section id="apis" class="resource-section">
           <h2 class="resource-section__heading">APIs</h2>
 
           <div class="resource-section__body">
