--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="flex">
       <div class="nav-space"></div>
       <!-- nav bar -->
-      <nav>
+      <nav class="main-nav">
         <div class="nav-wrapper">
           <!-- website logo -->
           <div class="nav-logo">
