added disabled feature to career cards page that ar not ready.

--- a/index.html
+++ b/index.html
@@ -106,23 +106,6 @@
               <li>
                 <a class="nav-link" href="/html/careers.html">Careers</a>
               </li>
-              <!-- <li>
-                <a class="nav-link" href="/html/contact.html">Contact</a>
-              </li> -->
-              <!-- <li class="dropdown-menu"
-                >Dropdown
-                <i class="fas fa-chevron-down fa-sm fa-fw dropdown-open"></i>
-                <i class="dropdown-close fas fa-chevron-up fa-sm fa-fw"></i>
-                <ul class="dropdown-links">
-                  <li>
-                    <a class="nav-link dropdown-link" href="#">Link 1</a>
-                  </li>
-                  <li>
-                    <a class="nav-link dropdown-link" href="#">Link 2</a>
-                  </li>
-                </ul>
-              </li> -->
-            </ul>
           </div>
 
           <!-- burger menu on small screen -->
@@ -136,6 +119,7 @@
         </div>
       </nav>
 
+      <!-- * banner -->
       <header class="banner">
         <div class="banner-wrapper">
           <h1>Tech Career Road Map</h1>
@@ -147,6 +131,7 @@
       </header>
 
       <main>
+        <!-- *intro -->
         <section class="intro">
           <div class="intro-wrapper">
             <h2 class="heading">Welcome!</h2>
@@ -167,10 +152,12 @@
           </div>
         </section>
 
+        <!--* career section -->
         <section class="careers">
           <h2 class="heading">Careers in Tech</h2>
 
           <div class="careers__cards">
+            <!-- frontend card -->
             <a href="/html/careers/frontend.html" class="careers__card-link">
               <div class="careers__card">
                 <h3>Frontend</h3>
@@ -180,7 +167,9 @@
                 >
               </div>
             </a>
-            <a href="/html/careers/frontend.html" class="careers__card-link">
+            <!-- backend card -->
+            <a href="#" class="careers__card-link disabled">
+              <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Backend</h3>
                 <p
@@ -189,7 +178,9 @@
                 >
               </div>
             </a>
-            <a href="#" class="careers__card-link">
+            <!-- android/mobile card -->
+            <a href="#" class="careers__card-link disabled">
+              <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Android/Mobile</h3>
                 <p
@@ -198,19 +189,25 @@
                 >
               </div>
             </a>
-            <a href="#" class="careers__card-link">
+            <!-- uiux card  -->
+            <a href="#" class="careers__card-link disabled">
+              <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Ui/Ux Designer</h3>
                 <p>Curated guide and resources to becoming a Ui/Ux designer.</p>
               </div>
             </a>
-            <a href="#" class="careers__card-link">
+            <!-- data analyst card -->
+            <a href="#" class="careers__card-link disabled">
+              <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Data Analyst</h3>
                 <p>Curated guide and resources to becoming a data analyst.</p>
               </div>
             </a>
-            <a href="#" class="careers__card-link">
+            <!-- product management card -->
+            <a href="#" class="careers__card-link disabled">
+              <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Product Management</h3>
                 <p
@@ -222,6 +219,7 @@
         </section>
       </main>
 
+      <!--* opensource (about the project) -->
       <aside class="opensource">
         <div class="opensource-wrapper">
           <h2 class="heading">Open Source</h2>
