--- a/html/careers.html
+++ b/html/careers.html
@@ -115,22 +115,6 @@
               <li>
                 <a class="nav-link" href="/html/careers.html">Careers</a>
               </li>
-              <!-- <li>
-                <a class="nav-link" href="/html/contact.html">Contact</a>
-              </li> -->
-              <!-- <li class="dropdown-menu"
-                >Dropdown
-                <i class="fas fa-chevron-down fa-sm fa-fw dropdown-open"></i>
-                <i class="dropdown-close fas fa-chevron-up fa-sm fa-fw"></i>
-                <ul class="dropdown-links">
-                  <li>
-                    <a class="nav-link dropdown-link" href="#">Link 1</a>
-                  </li>
-                  <li>
-                    <a class="nav-link dropdown-link" href="#">Link 2</a>
-                  </li>
-                </ul>
-              </li> -->
             </ul>
           </div>
 
@@ -146,6 +130,7 @@
       </nav>
 
       <main>
+        <!--* intro -->
         <section class="intro">
           <div class="intro-wrapper">
             <h1 class="heading">Begin Your Tech Career Journey!</h1>
@@ -166,10 +151,12 @@
           </div>
         </section>
 
+        <!-- * careers section -->
         <section class="careers">
           <h2 class="heading">Careers in Tech</h2>
 
           <div class="careers__cards">
+            <!-- frontend card -->
             <a href="/html/careers/frontend.html" class="careers__card-link">
               <div class="careers__card">
                 <h3>Frontend</h3>
@@ -179,7 +166,9 @@
                 >
               </div>
             </a>
-            <a href="/html/careers/frontend.html" class="careers__card-link">
+            <!-- backend card -->
+            <a href="#" class="careers__card-link disabled">
+              <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Backend</h3>
                 <p
@@ -188,7 +177,9 @@
                 >
               </div>
             </a>
-            <a href="#" class="careers__card-link">
+            <!-- android/mobile card -->
+            <a href="#" class="careers__card-link disabled">
+              <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Android/Mobile</h3>
                 <p
@@ -197,19 +188,25 @@
                 >
               </div>
             </a>
-            <a href="#" class="careers__card-link">
+            <!-- uiux card  -->
+            <a href="#" class="careers__card-link disabled">
+              <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Ui/Ux Designer</h3>
                 <p>Curated guide and resources to becoming a Ui/Ux designer.</p>
               </div>
             </a>
-            <a href="#" class="careers__card-link">
+            <!-- data analyst card -->
+            <a href="#" class="careers__card-link disabled">
+              <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Data Analyst</h3>
                 <p>Curated guide and resources to becoming a data analyst.</p>
               </div>
             </a>
-            <a href="#" class="careers__card-link">
+            <!-- product management card -->
+            <a href="#" class="careers__card-link disabled">
+              <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Product Management</h3>
                 <p
@@ -221,6 +218,7 @@
         </section>
       </main>
 
+      <!--* opensource (about the project) -->
       <aside class="opensource">
         <div class="opensource-wrapper">
           <h2 class="heading">Open Source</h2>
