added contribute page.

--- a/html/careers/frontend.html
+++ b/html/careers/frontend.html
@@ -116,6 +116,9 @@
               <li>
                 <a class="nav-link" href="/html/careers.html">Careers</a>
               </li>
+              <li>
+                <a class="nav-link" href="/html/contribute.html">Contribute</a>
+              </li>
             </ul>
           </div>
 
@@ -3576,6 +3579,9 @@
               <li><a class="footer-link" href="/">Home</a></li>
               <li>
                 <a class="footer-link" href="/html/careers.html">Careers</a>
+              </li>
+              <li>
+                <a class="nav-link" href="/html/contribute.html">Contribute</a>
               </li>
             </ul>
           </div>
