--- a/html/careers.html
+++ b/html/careers.html
@@ -115,6 +115,9 @@
               <li>
                 <a class="nav-link" href="/html/careers.html">Careers</a>
               </li>
+              <li>
+                <a class="nav-link" href="/html/contribute.html">Contribute</a>
+              </li>
             </ul>
           </div>
 
@@ -250,6 +253,9 @@
               <li><a class="footer-link" href="/">Home</a></li>
               <li>
                 <a class="footer-link" href="/html/careers.html">Careers</a>
+              </li>
+              <li>
+                <a class="nav-link" href="/html/contribute.html">Contribute</a>
               </li>
             </ul>
           </div>
