--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
               <li>
                 <a class="nav-link" href="/html/careers.html">Careers</a>
               </li>
+              <li>
+                <a class="nav-link" href="/html/contribute.html">Contribute</a>
+              </li>
+            </ul>
           </div>
 
           <!-- burger menu on small screen -->
@@ -251,6 +255,9 @@
               <li><a class="footer-link" href="/">Home</a></li>
               <li>
                 <a class="footer-link" href="/html/careers.html">Careers</a>
+              </li>
+              <li>
+                <a class="nav-link" href="/html/contribute.html">Contribute</a>
               </li>
             </ul>
           </div>
