--- a/html/careers/frontend.html
+++ b/html/careers/frontend.html
@@ -376,9 +376,11 @@
           <div class="resource-section__body">
             <p
               >Frontend development, also called client-side development, is the
-              act of creating the graphical user interface of a website, using
+              process of creating the visible part of a website, using
               HTML, CSS, and JavaScript, so that users can view and interact
-              with the website.</p
+              with that website.</p>
+            <p
+              >Learn more about what frontend development is by clicking the links below.</p
             >
           </div>
 
@@ -389,14 +391,14 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank"
-                    href="https://skillcrush.com/blog/skills-to-become-a-front-end-developer/"
-                    >Skills to become a front-end developer.</a
+                    href="https://www.freecodecamp.org/news/front-end-developer-what-is-front-end-development-explained-in-plain-english/"
+                    >What is front end development explained in plain english.</a
                   >
                 </li>
                 <li class="resource-link">
                   <a target="_blank"
-                    href="https://www.freecodecamp.org/news/front-end-developer-what-is-front-end-development-explained-in-plain-english/"
-                    >What is front end development explained in plain english.</a
+                    href="https://skillcrush.com/blog/skills-to-become-a-front-end-developer/"
+                    >Skills to become a front-end developer.</a
                   >
                 </li>
               </ul>
@@ -436,7 +438,7 @@
 
           <div class="resource-section__body">
             <p
-              >A roadmap is a visualization of a strategic plan. You will need one if you want to visualize yourself as a frontend developer. To achieve this you will need a solid plan for how you will turn your aspirations into reality. The resources below will guide you as to how to create your strategic plan.</p
+              >A roadmap is a visualization of a strategic plan. You will need one if you want to actualize becoming a frontend developer. The resources below will guide you as to how to create/use your roadmap.</p
             >
           </div>
 
@@ -464,13 +466,13 @@
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="https://youtu.be/BEoFSRdkSZQ"
-                    >Fullstack developer Roadmap.</a
+                  <a target="_blank" href="https://youtu.be/lnJG9grXqfs"
+                    >Frontend Developer Learning Roadmap 2021.</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="https://youtu.be/lnJG9grXqfs"
-                    >Frontend Developer Learning Roadmap 2021.</a
+                  <a target="_blank" href="https://youtu.be/BEoFSRdkSZQ"
+                    >Fullstack developer Roadmap.</a
                   >
                 </li>
               </ul>
@@ -496,10 +498,10 @@
 
           <div class="resource-section__body">
             <p
-              >Coding bootcamps are created to help one with little to no experience in coding gain programming skills by offering them a technical training program on skills that employers look for. They focus on the most important aspects of coding while allowing you to apply your new skills to solve real-world problems. Most of them require you to pay a certain fee, and the mode of payment depends on what is stipulated in the contract.</p
+              >Bootcamps are created to help one with little to no experience in coding gain programming skills by offering them technical training on the relevant skills. They focus on the most important aspects of coding while allowing one apply this new skills to solve real-life problems.</p
             >
             <p
-              >An internship is a period of work often taken by students to gain professional learning experience relating to their field of study or career interest. It can be a paid internship or unpaid internship. Below is a list of organizations that offer coding internships. You don't have to be a student to apply to them.</p
+              >Internships on the other hand are a period of work often taken to gain professional learning experience relating to a field of study or career interest. It can be a paid or unpaid. You can find below, a list of organizations that offer coding internships and run bootcamps in the tech field.</p
             >
           </div>
 
@@ -513,12 +515,12 @@
                   <span class="resource-link-badge">Not free</span>
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="https://enyata.com/academy">Enyata</a>
-                  <span class="resource-link-badge"></span>
-                </li>
-                <li class="resource-link">
                   <a target="_blank" href="https://decagon.institute/">Decagon</a>
                   <span class="resource-link-badge">Not free</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://enyata.com/academy">Enyata</a>
+                  <span class="resource-link-badge"></span>
                 </li>
               </ul>
             </div>
@@ -554,7 +556,7 @@
 
           <div class="resource-section__body">
             <p
-              >For you to start coding, you will need a place to write and run your code. This is where code editors come in. A code editor is a text editor specifically designed for writing and editing source codes. You can find the editors used by most front-end developers below, with the most popular being VsCode</p
+              >For you to start coding, you will need a place to write and run your code. This is where code editors come in. A code editor is a text editor specifically designed for writing and editing source codes. You can find the editors used by most front-end developers below, with the most popular being VsCode.</p
             >
           </div>
 
