added a section to careers page.

--- a/html/careers.html
+++ b/html/careers.html
@@ -153,8 +153,14 @@
                 officiis fugit fuga maiores beatae alias, rem porro magni
                 aliquid at?</p
               >
+            <p>Not sure which career to pick? You can use the resources below as guides.</p>
+            
+            </div>
+
+          
             </div>
           </div>
+
         </section>
 
         <!-- * careers section -->
