--- a/html/careers/frontend.html
+++ b/html/careers/frontend.html
@@ -569,11 +569,11 @@
                   <ul class="resource-link-sublinks">
                     <li class="resource-link">
                       <a href="https://code.visualstudio.com/download"
-                        >Download here</a>                      >
+                        >Download here</a>
                     </li>
                     <li class="resource-link">
                       <a href="https://code.visualstudio.com/docs"
-                        >Documentations</a
+                        >View documentations</a
                       >
                     </li>
                   </ul>
